Fix: compilation error in notification-service